[package]
name = "lay-simulator-blueqat"
version = "0.1.0"
authors = ["gyu-don <takumi.kt+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lay = { path = "../lay" }
cpython = "0.5.0"
tokio = { version = "0.2.21", features = ["rt-core", "rt-threaded", "blocking"] }
futures = "0.3.5"
