[package]
name = "lay-simulator-blueqat"
version = "0.1.0"
authors = ["gyu-don <takumi.kt+git@gmail.com>"]
edition = "2018"
description = "Blueqat backend for lay"
repository = "https://github.com/quantum-lay/lay-simulator-blueqat"
license = "Apache-2.0"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lay = "0.1.0"
cpython = "0.5.0"
tokio = { version = "0.2.21", features = ["rt-core", "rt-threaded", "blocking", "macros"] }
